fixing alignment

--- a/Student_Assessment_Projects/wwwroot/css/site1.css
+++ b/Student_Assessment_Projects/wwwroot/css/site1.css
@@ -20,14 +20,20 @@ header {
 }
 
 .container {
-    max-width: 1000px;
+    /* max-width: 1000px;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: center;*/
+
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 60px;
+    margin-top: 2rem;
 }
 
-header .logo {
+/*header .logo {
     display: flex;
     align-items: center;
 }
@@ -47,7 +53,7 @@ header .nav {
         color: inherit;
         text-decoration: none;
         font-weight: bold;
-    }
+    }*/
 
 main {
     padding: 20px 0;
@@ -62,6 +68,14 @@ h2 {
     margin-bottom: 10px;
 }
 
+
+.row {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .tracks {
     display: flex;
     flex-wrap: wrap;
@@ -73,11 +87,15 @@ h2 {
     background-position: center;
 }
 
-.trackss {
-    display: flex;
+.column {
+    /* display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    background-color: #fff;
+    background-color: #fff;*/
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .track h3 {
@@ -89,6 +107,25 @@ h2 {
     height: 150px;
     object-fit: cover;
     margin-bottom: 10px;
+}
+.containers {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    margin: 20px;
+    max-width: 350px;
+}
+
+.image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
 .tracksss img {
